--- a/databases/postgresql/files/pgsql.sh.tmpl
+++ b/databases/postgresql/files/pgsql.sh.tmpl
@@ -1,5 +1,6 @@
 #!/bin/sh
 
+# $NetBSD: pgsql.sh.tmpl,v 1.2 1998/02/17 15:38:59 agc Exp $
 # FreeBSD Id: pgsql.sh.tmpl,v 1.3 1997/10/05 21:00:49 andreas Exp
 
 # pgsql.sh - postgresql startup file for FreeBSD and possibly *BSD (untested)
