--- a/textproc/scrollkeeper/files/install.tmpl
+++ b/textproc/scrollkeeper/files/install.tmpl
@@ -1,4 +1,4 @@
-# $NetBSD: install.tmpl,v 1.2 2003/06/20 10:49:57 jmmv Exp $
+# $NetBSD: install.tmpl,v 1.3 2004/03/07 11:53:43 jmmv Exp $
 
 SCROLLKEEPER_DATADIR="@SCROLLKEEPER_DATADIR@"
 SCROLLKEEPER_REBUILDDB="@SCROLLKEEPER_REBUILDDB@"
@@ -6,9 +6,9 @@ SCROLLKEEPER_UPDATEDB="@SCROLLKEEPER_UPDATEDB@"
 
 case ${STAGE} in
 POST-INSTALL)
-	${SCROLLKEEPER_UPDATEDB} -q -p ${SCROLLKEEPER_DATADIR}/db > /dev/null 2>&1
+	${SCROLLKEEPER_UPDATEDB} -q -p ${SCROLLKEEPER_DATADIR}/db
 	;;
 DEINSTALL)
-	${SCROLLKEEPER_UPDATEDB} -q -p ${SCROLLKEEPER_DATADIR}/db > /dev/null 2>&1
+	${SCROLLKEEPER_UPDATEDB} -q -p ${SCROLLKEEPER_DATADIR}/db
 	;;
 esac
